[build-system]
requires = ["flit_core >=3.4,<4", "pip >= 21.3"]
build-backend = "flit_core.buildapi"

[project]
name = "segmantic"
authors = [{name = "Bryn Lloyd", email = "lloyd@itis.swiss"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.7"
dependencies = [
    "dominate",
    "itk>=5.3rc3",
    "makefun",
    "matplotlib",
    "monai",
    "pytorch-lightning",
    "scikit-learn",
    "tensorboard",
    "torch",
    "torchinfo",
    "torchvision",
    "typer"
]

[project.optional-dependencies]
test = [
  "mypy",
  "pytest"
]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "pytest",
  "pre-commit"
]

[project.urls]
repository = "https://github.com/dyollb/segmantic.git"
documentation = "https://dyollb.github.io/segmantic/"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = false
warn_unused_configs = true
exclude = "/pix2pix_cyclegan/"

[[tool.mypy.overrides]]
module = "segmantic.prepro.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "itk.*,PIL,matplotlib.*,torch,torchvision.*,numba,setuptools,pytest,typer.*,click,colorama,nibabel,sklearn.*"
ignore_missing_imports = true
