[build-system]
requires = ["setuptools>=62.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "segmantic"
authors = [{name = "Bryn Lloyd", email = "lloyd@itis.swiss"}]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "adabelief_pytorch",
    "h5py",
    "itk-io",
    "matplotlib",
    "monai",
    "nibabel",
    "pytorch-lightning",
    "scikit-learn",
    "SimpleITK",
    "sitk-cli",
    "tensorboard",
    "torch",
    "torchvision",
    "typer",
    "typing-extensions"
]

[tool.setuptools.dynamic]
version = {attr = "segmantic.__version__"}

[project.optional-dependencies]
test = [
  "mypy",
  "pytest"
]
dev = [
  "black",
  "coverage",
  "flake8",
  "isort",
  "mypy",
  "pre-commit",
  "pytest-cov"
]

[project.urls]
repository = "https://github.com/dyollb/segmantic.git"
documentation = "https://dyollb.github.io/segmantic/"

[project.scripts]
segmantic-unet = "segmantic.commands.monai_unet_cli:main"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
no_implicit_optional = false
exclude = [
  'some_folder_to_exclude'
]
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  'segmantic.prepro.*',
  'segmantic.utils.*'
]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "itk.*,PIL,matplotlib.*,torch,torchvision.*,numba,setuptools,pytest,typer.*,click,colorama,nibabel,sklearn.*,yaml,scipy.*,adabelief_pytorch,h5py,SimpleITK,vtk.*,sitk_cli"
ignore_missing_imports = true
