[metadata]
name = segmantic
version = 0.1.0
author = Bryn Lloyd
author_email = lloyd@itis.swiss
description = ML-based segmentation for medical images
long_description = file: README.md, LICENSE
url = https://github.com/dyollb/segmantic.git
license = MIT License
keywords = segmentation, medical

[options]
python_requires = >=3.7, <4
install_requires =
    monai
    torch
    torchvision
    pytorch-lightning
    typer
    matplotlib
    dominate
    scikit-learn
    tensorboard
    itk
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    mypy
dev =
    black
    pytest
    mypy
    pre-commit

[options.package_data]
sample =
    example_data.csv
