# setup/package options
[metadata]
name = segmantic
version = 0.1.0
author = Bryn Lloyd
author_email = lloyd@itis.swiss
description = ML-based segmentation for medical images
long_description = file: README.md, LICENSE
url = https://github.com/dyollb/segmantic.git
license = MIT License
keywords = segmentation, medical

[options]
python_requires = >=3.7, <4
install_requires =
    monai
    torch
    torchvision
    pytorch-lightning
    typer
    matplotlib
    dominate
    scikit-learn
    tensorboard
    itk>=5.3rc3
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    mypy
dev =
    black
    pytest
    mypy
    pre-commit


# mypy options
[mypy]
disallow_untyped_defs = False
warn_unused_configs = True
exclude = /pix2pix_cyclegan/

# mypy per-module options:
[mypy-segmantic.prepro.*]
disallow_untyped_defs = True

# mypy thirdparty options:
[mypy-itk.*,PIL,matplotlib.*,torch,torchvision.*,numba,setuptools,pytest,typer.*,click,colorama,nibabel,sklearn.*]
ignore_missing_imports = True
